exports[`ReducerStoragUnitPanel LOAD: fail action 1`] = `
Object {
  "error": [Error: LOAD has some error.],
  "loaded": false,
  "loading": false,
  "state": Object {
    "environmentAssessment": Object {},
    "environmentRequirement": Object {},
    "securityAssessment": Object {}
  }
}
`;

exports[`ReducerStoragUnitPanel LOAD: initial action 1`] = `
Object {
  "loading": true,
  "state": Object {
    "environmentAssessment": Object {},
    "environmentRequirement": Object {},
    "securityAssessment": Object {}
  }
}
`;

exports[`ReducerStoragUnitPanel LOAD: no action 1`] = `
Object {
  "state": Object {
    "environmentAssessment": Object {},
    "environmentRequirement": Object {},
    "securityAssessment": Object {}
  }
}
`;

exports[`ReducerStoragUnitPanel LOAD: success action 1`] = `
Object {
  "data": Object {
    "area": undefined,
    "areaTo": undefined,
    "breadcrumb": Array [],
    "environmentAssessment": Object {},
    "environmentRequirement": Object {},
    "height": undefined,
    "heightTo": undefined,
    "securityAssessment": Object {},
    "someField": 1
  },
  "loaded": true,
  "loading": false,
  "state": Object {
    "environmentAssessment": Object {},
    "environmentRequirement": Object {},
    "securityAssessment": Object {}
  }
}
`;

exports[`ReducerStoragUnitPanel creates LOAD_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/storageunit-container/LOAD"
  },
  Object {
    "result": Object {
      "environmentRequirement": Object {
        "comment": "fdsfd"
      },
      "groupRead": "foo",
      "id": 3,
      "isPartOf": 2,
      "name": "Forskningens hus",
      "path": ",1,2,3,",
      "pathNames": Array [
        Object {
          "name": "root-node",
          "nodeId": 1
        },
        Object {
          "name": "Utviklingsmuseet",
          "nodeId": 2
        },
        Object {
          "name": "Forskningens hus",
          "nodeId": 3
        }
      ],
      "type": "Building",
      "updatedBy": "e4eaf917-e095-456e-a66d-08555b66f4f2",
      "updatedByName": "Test user",
      "updatedDate": "2016-10-24T15:41:35+00:00"
    },
    "type": "musit/storageunit-container/LOAD_SUCCESS"
  }
]
`;

exports[`ReducerStoragUnitPanel insert INSERT_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/storageunit-container/INSERT"
  },
  Object {
    "result": Object {
      "environmentAssessment": Object {},
      "environmentRequirement": Object {},
      "groupRead": "foo",
      "id": 2,
      "isPartOf": 1,
      "name": "p5",
      "path": ",1,2,",
      "pathNames": Array [
        Object {
          "name": "root-node",
          "nodeId": 1
        },
        Object {
          "name": "Utviklingsmuseet",
          "nodeId": 2
        }
      ],
      "securityAssessment": Object {},
      "type": "Room",
      "updatedBy": "e4eaf917-e095-456e-a66d-08555b66f4f2",
      "updatedDate": "2016-10-24T16:13:24+00:00"
    },
    "type": "musit/storageunit-container/INSERT_SUCCESS"
  }
]
`;

exports[`ReducerStoragUnitPanel insert: fail action 1`] = `
Object {
  "data": [Error: Some error in insert.],
  "loaded": true,
  "loading": false,
  "state": Object {
    "environmentAssessment": Object {},
    "environmentRequirement": Object {},
    "securityAssessment": Object {}
  }
}
`;

exports[`ReducerStoragUnitPanel insert: initial action 1`] = `
Object {
  "loading": true,
  "state": Object {
    "environmentAssessment": Object {},
    "environmentRequirement": Object {},
    "securityAssessment": Object {}
  }
}
`;

exports[`ReducerStoragUnitPanel insert: no action 1`] = `
Object {
  "state": Object {
    "environmentAssessment": Object {},
    "environmentRequirement": Object {},
    "securityAssessment": Object {}
  }
}
`;

exports[`ReducerStoragUnitPanel insert: success action 1`] = `
Object {
  "data": Object {
    "area": undefined,
    "areaTo": undefined,
    "breadcrumb": Array [],
    "environmentAssessment": Object {},
    "environmentRequirement": Object {},
    "height": undefined,
    "heightTo": undefined,
    "securityAssessment": Object {},
    "someField": 1
  },
  "loaded": true,
  "loading": false,
  "state": Object {
    "environmentAssessment": Object {},
    "environmentRequirement": Object {},
    "securityAssessment": Object {}
  }
}
`;

exports[`ReducerStoragUnitPanel update INSERT_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/storageunit-container/INSERT"
  },
  Object {
    "result": Object {
      "environmentAssessment": Object {},
      "environmentRequirement": Object {},
      "groupRead": "foo",
      "id": 2,
      "isPartOf": 1,
      "name": "p5",
      "path": ",1,2,",
      "pathNames": Array [
        Object {
          "name": "root-node",
          "nodeId": 1
        },
        Object {
          "name": "Utviklingsmuseet",
          "nodeId": 2
        }
      ],
      "securityAssessment": Object {},
      "type": "Room",
      "updatedBy": "e4eaf917-e095-456e-a66d-08555b66f4f2",
      "updatedByName": "Test user",
      "updatedDate": "2016-10-24T16:13:24+00:00"
    },
    "type": "musit/storageunit-container/INSERT_SUCCESS"
  }
]
`;

exports[`ReducerStoragUnitPanel update: fail action 1`] = `
Object {
  "data": [Error: Some error in update.],
  "loaded": true,
  "loading": false,
  "state": Object {
    "environmentAssessment": Object {},
    "environmentRequirement": Object {},
    "securityAssessment": Object {}
  }
}
`;

exports[`ReducerStoragUnitPanel update: initial action 1`] = `
Object {
  "loading": true,
  "state": Object {
    "environmentAssessment": Object {},
    "environmentRequirement": Object {},
    "securityAssessment": Object {}
  }
}
`;

exports[`ReducerStoragUnitPanel update: no action 1`] = `
Object {
  "state": Object {
    "environmentAssessment": Object {},
    "environmentRequirement": Object {},
    "securityAssessment": Object {}
  }
}
`;

exports[`ReducerStoragUnitPanel update: success action 1`] = `
Object {
  "data": Object {
    "area": undefined,
    "areaTo": undefined,
    "breadcrumb": Array [],
    "environmentAssessment": Object {},
    "environmentRequirement": Object {},
    "height": undefined,
    "heightTo": undefined,
    "securityAssessment": Object {},
    "someField": 1
  },
  "loaded": true,
  "loading": false,
  "state": Object {
    "environmentAssessment": Object {},
    "environmentRequirement": Object {},
    "securityAssessment": Object {}
  }
}
`;
